updated the index with photos of team

--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,42 @@ body {
   overflow: hidden;
 }
 
+.boxGallery {
+  height: 650px;
+  width: 1200px;
+  box-shadow: 0px 0px 12px 4px black;
+  margin: 40px;
+}
+
+.box-CardPort {
+  width: 400px;
+  height: 450px;
+  box-shadow: 5px 5px 12px 2px rgb(0, 86, 9);
+  margin: 1.5%;
+}
+
+.box-CardPort img {
+  border: 1px solid #ffffff;
+}
+
+.box-CardPort div {
+  flex-direction: column;
+  padding: 5%;
+}
+
+.github {
+  background-image: url('../img/github.png');
+  background-size: contain;
+  height: 50px;
+  width: 50px;
+  background-color: transparent;
+  border: none;
+}
+
+.github:hover {
+  background-color: black;
+}
+
 .zoomImage {
   transition: transform 0.3s ease-in-out;
 }
