--- a/css/index.css
+++ b/css/index.css
@@ -31,6 +31,10 @@ header button {
   height: 850px;
 }
 
+.dropdown-menu img {
+  padding-left: 5px;
+}
+
 .boxGallery {
   height: auto;
   width: 1200px;
